Put a background behind window titles in overview for visibility. Fixes system76/pop-distro#101

--- a/src/gnome-shell/3.24/gnome-shell-dark.css
+++ b/src/gnome-shell/3.24/gnome-shell-dark.css
@@ -1696,14 +1696,14 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active {
 .window-caption {
   spacing: 25px;
   color: #FFFFFF;
-  background-color: transparent;
+  background-color: rgba(87, 79, 74, 0.87);
   border-radius: 4px;
   padding: 4px 8px;
   -shell-caption-spacing: 12px;
 }
 
 .window-caption:hover {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(87, 79, 74, 0.87);
   color: #FFFFFF;
 }
 
