--- a/src/gnome-shell/3.24/sass/_common.scss
+++ b/src/gnome-shell/3.24/sass/_common.scss
@@ -1366,11 +1366,11 @@ StScrollBar {
   .window-caption {
     spacing: 25px;
     color: $inverse_fg_color;
-    background-color: transparent;
+    background-color: $dark_fg_color;
     border-radius: $material_radius;
     padding: 4px 8px;
     -shell-caption-spacing: 12px;
-    &:hover { background-color: $inverse_track_color; color: $inverse_fg_color; }
+    &:hover { background-color: $dark_fg_color; color: $inverse_fg_color; }
   }
 
   //search entry
